# NeoBotSeller

./: AGENTS.md  whatsapp-ia-architecture.html
.cursor/: mcp.json
Odoo/: .env.example  AGENTS.md  README.md  docker-compose.yml
Odoo/config/: odoo.conf
Odoo/connectors/: __init__.py  odoo_client.py  tool_definitions.py  tool_executor.py
Odoo/connectors/crm/: __init__.py  service.py
Odoo/connectors/stock/: __init__.py  service.py
Odoo/connectors/tests/: conftest.py  test_tool_executor.py
Odoo/mcp-server/: .env.example  README.md  pyproject.toml
Odoo/mcp-server/scripts/: smoke_test.py
Odoo/mcp-server/src/neobotseller_odoo_mcp/: __main__.py  config.py  server.py
Odoo/scripts/: init-odoo.sh  requirements.txt  seed-demo-data.py
RAG/: AGENTS.md  README.md
RAG/actions-service/: .env.example  README.md
RAG/api/: .env.example  README.md
RAG/api/src/rag_api/: config.py  main.py  (+5 more)
RAG/documents/: README.md
RAG/embedding-service/: .env.example  README.md  requirements.txt
RAG/qdrant/: README.md  docker-compose.yml
RAG/webhook-service/: .env  README.md
Redis/: .env.example  AGENTS.md  README.md  docker-compose.yml
Redis/conversation-service/: .env.example  requirements-dev.txt  requirements.txt
Streamlit/: .env.example  AGENTS.md  README.md  streamlit_whatsapp_simulator_app.py
Streamlit/src/: webhook_service_http_client.py  whatsapp_meta_webhook_payload.py
docs/: ARCHITECTURE.md
scripts/: run-tests.sh
services/: AGENTS.md  README.md
services/ia-core/: .env.example  README.md  requirements.txt
shared/contracts/: rag-inbound-message.json
(+39 files in other folders)
