[project]
name = "neobotseller-odoo-mcp"
version = "0.1.0"
description = "MCP Server NeoBotSeller — Odoo Stock y CRM"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.9.0",
]

[project.scripts]
neobotseller-odoo-mcp = "neobotseller_odoo_mcp.server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
